--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
         </div>  
       </header>
-<!--
+      
+<!-- GRID SYSTEM
       <section class="grid-test">
 
         <div class="row">
