--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+
       <header class="header">
         <div class="header__logo-box">
           <img src="img/logo-white.png" alt="Logo" class="header__logo">
@@ -25,6 +26,26 @@
           <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
         </div>  
       </header>
+
+      <main>
+        <section class="section-about">
+          <div class="u-center-text u-margin-bottom-8">
+            <h2 class="heading-secondary">
+              Exciting tours for adventurous people
+            </h2>
+          </div>
+
+          <div class="row">
+              <div class="col-1-of-2">
+                Text content
+              </div>
+              <div class="col-1-of-2">
+                Image composition
+              </div>
+            </div>
+
+        </section>
+      </main>
       
 <!-- GRID SYSTEM
       <section class="grid-test">
