--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <main>
         <section class="section-about">
-          <div class="u-center-text u-margin-bottom-8">
+          <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
               Exciting tours for adventurous people
             </h2>
@@ -37,7 +37,16 @@
 
           <div class="row">
               <div class="col-1-of-2">
-                Text content
+                <h3 class="heading-tertiary u-margin-bottom=small">You're going to fall in love with nature</h3>
+                <p class="paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis necessitatibus debitis, accusamus saepe odio sed, ullam accusantium rem amet ab, eveniet porro odit quam alias! Deleniti velit quisquam delectus totam.
+                </p>
+
+                <h3 class="heading-tertiary u-margin-bottom-small">Live adverntures like you never have before</h3>
+                <p class="paragraph">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
+                </p>
+                <a href="#" class="btn-text">Learn more &rarr;</a>
               </div>
               <div class="col-1-of-2">
                 Image composition
