--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-
+        <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
@@ -56,6 +56,53 @@
                 </div>  
               </div>
             </div>
+
+        </section>
+
+        <section class="section-features">
+
+          <div class="row">
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon ion-md-globe"></i>
+                <h3 class="heading-tertiary u-margin-bottom=small">Explore the world</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
+                </p>
+              </div>
+            </div>
+
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon ion-md-compass"></i> 
+                <h3 class="heading-tertiary u-margin-bottom=small">Meet nature</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
+                </p>
+              </div>
+            </div>
+
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon ion-md-map"></i>
+                <h3 class="heading-tertiary u-margin-bottom=small">Find your way</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
+                </p>
+              </div>
+            </div>
+
+            <div class="col-1-of-4">
+              <div class="feature-box">
+                <i class="feature-box__icon ion-md-heart"></i>
+                <h3 class="heading-tertiary u-margin-bottom=small">Live a healthier life</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
+                </p>
+              </div>
+            </div>
+            
+          </div>
 
         </section>
       </main>
