section-book, book, linear-gradients, and form started

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="css/icon-font.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+        <script src="https://kit.fontawesome.com/b2a5f8c126.js"></script>
         
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
@@ -64,8 +66,9 @@
           <div class="row">
             <div class="col-1-of-4">
               <div class="feature-box">
-                <i class="feature-box__icon ion-md-globe"></i>
-                <h3 class="heading-tertiary u-margin-bottom=small">Explore the world</h3>
+                  <i class="fas fa-globe feature-box__icon"></i>
+                  <!-- <i class="ion-md-globe feature-box__icon"></i> -->
+                <h3 class="heading-tertiary u-margin-bottom=small bottom-heading-margin">Explore the world</h3>
                 <p class="feature-box__text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
                 </p>
@@ -74,8 +77,9 @@
 
             <div class="col-1-of-4">
               <div class="feature-box">
-                <i class="feature-box__icon ion-md-compass"></i> 
-                <h3 class="heading-tertiary u-margin-bottom=small">Meet nature</h3>
+                <i class="fas fa-compass feature-box__icon"></i>
+                <!-- <i class="feature-box__icon ion-md-compass"></i>  -->
+                <h3 class="heading-tertiary u-margin-bottom=small bottom-heading-margin">Meet nature</h3>
                 <p class="feature-box__text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
                 </p>
@@ -84,8 +88,9 @@
 
             <div class="col-1-of-4">
               <div class="feature-box">
-                <i class="feature-box__icon ion-md-map"></i>
-                <h3 class="heading-tertiary u-margin-bottom=small">Find your way</h3>
+                <i class="fas fa-map feature-box__icon"></i>
+                <!-- <i class="feature-box__icon ion-md-map"></i> -->
+                <h3 class="heading-tertiary u-margin-bottom=small bottom-heading-margin">Find your way</h3>
                 <p class="feature-box__text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
                 </p>
@@ -94,8 +99,9 @@
 
             <div class="col-1-of-4">
               <div class="feature-box">
-                <i class="feature-box__icon ion-md-heart"></i>
-                <h3 class="heading-tertiary u-margin-bottom=small">Live a healthier life</h3>
+                <i class="fas fa-heart feature-box__icon"></i>
+                <!-- <i class="feature-box__icon ion-md-heart"></i> -->
+                <h3 class="heading-tertiary u-margin-bottom=small bottom-heading-margin">Live a healthier life</h3>
                 <p class="feature-box__text">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi fuga magni natus sit pariatur excepturi?
                 </p>
@@ -266,6 +272,31 @@
           </div>
 
         </section>
+
+        <section class="section-book">
+          <div class="row">
+            <div class="book">
+              <div class="book__form">
+                <form action="#" class="form">
+                  <div class="u-margin-bottom-medium">
+                      <h2 class="heading-secondary">
+                        Start booking now!
+                      </h2>
+                  </div>
+                  <div class="form__group">
+                    <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                    <label for="name" class="form__label">Full name</label>
+                  </div>
+                  <div class="form__group">
+                    <input type="email" class="form__input" placeholder="Email Address" id="email" required>
+                    <label for="email" class="form__label">Email Address</label>
+                  </div>
+                </form>
+              </div>     
+            </div>
+          </div>
+        </section>
+
       </main>
       
 <!-- GRID SYSTEM
