White space under images not fixed/hyphen not working

--- a/index.html
+++ b/index.html
@@ -371,6 +371,27 @@
           </div>
         </div>
       </footer>
+
+      <div class="popup">
+        <div class="popup__content">
+          <div class="popup__left">
+            <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+            <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+          </div>
+          <div class="popup__right">
+            <h2 class="heading-secondary u-margin-bottom-small">Start booking</h2>
+            <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+            <p class="popup__text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, nesciunt voluptate aut ullam enim, optio dignissimos, ea voluptatibus quas dolor natus officia repellendus aspernatur magni fugit explicabo soluta architecto adipisci!
+              Vel pariatur amet ipsa velit cupiditate fugiat, ab, voluptas sit iure nulla accusamus, nostrum placeat tempore fugit esse? Exercitationem, nesciunt voluptate aut ullam enim, optio dignissimos, ea voluptatibus quas dolor natus officia repellendus aspernatur magni. voluptatibus quas dolor natus officia repellendus aspernatur magni fugit explicabo soluta architecto adipisci!
+              Vel pariatur amet ipsa velit cupiditate fugiat, ab, voluptas sit iure nulla accusamus, nostrum placeat tempore fugit esse? Exercitationem. 
+            </p>
+            <div class="u-center-text u-margin-top-huge">
+              <a href="#" class="btn btn--green">Book now</a>
+            </div>
+          </div>
+        </div>
+      </div>
       
 <!-- GRID SYSTEM
       <section class="grid-test">
